name:        language-dot
version:     0.0.1
category:    Language
synopsis:    A library for the analysis of Graphviz DOT files
description: A library for the analysis of Graphviz DOT files.
author:      Brian Lewis <brian@lorf.org>
maintainer:  Brian Lewis <brian@lorf.org>
license:     PublicDomain

cabal-version: >= 1.6
build-type:    Custom

extra-source-files:
  src/test.hs

library
  hs-source-dirs:
    src

  exposed-modules:
    Language.Dot
    Language.Dot.Parser
    Language.Dot.Pretty
    Language.Dot.Syntax

  build-depends:
    base   >= 3 && < 5,
    parsec == 3.*,
    pretty == 1.*

  ghc-options: -Wall
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

source-repository head
  type:     git
  location: git://github.com/bsl/language-dot.git
